--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 Django==3.1.2
 django-active-users==0.3.0
 django-redis==4.12.1
+gunicorn==20.0.4
 pytz==2020.1
 redis==3.5.3
 six==1.15.0
