--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-active-users==0.3.0
 django-crispy-forms==1.9.2
 django-redis==4.12.1
 gunicorn==20.0.4
+python-dotenv==0.15.0
 pytz==2020.1
 redis==3.5.3
 six==1.15.0
